# fastapi-crud

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
app/: main.py
app/api/dependencies/: auth.py
app/api/v1/: router.py  users.py
app/core/: config.py
app/core/middlewares/: security_headers.py
app/db/: database.py
app/db/queries/: create_table_users.sql
app/models/: users.py
app/schemas/: users.py
app/services/: JWTAuth.py  jwt_auth.py  users.py
